--- a/app/src/sass/components/form.sass
+++ b/app/src/sass/components/form.sass
@@ -2,6 +2,8 @@
   &-block
     @include dfc()
     margin-bottom: 21px
+    &:last-child
+      margin-bottom: 0px
     input
       width: 100%
       border-radius: 5px
@@ -10,6 +12,9 @@
       line-height: 22px
       color: #000
       padding: 13px 20px
+      @media screen and ( max-width: 550px )
+        font-size: 16px
+        line-height: 20px
     &--textarea
       height: 100%
       margin-bottom: 0px
@@ -23,14 +28,18 @@
         padding: 13px 20px
         resize: none
         height: calc(100% - 21px)
-    &:last-child
-      margin-bottom: 0px
+        @media screen and ( max-width: 550px )
+          font-size: 16px
+          line-height: 20px
 
 .label
   font-size: 18px
   line-height: 22px
   color: #000
   margin-bottom: 5px
+  @media screen and ( max-width: 550px )
+    font-size: 16px
+    line-height: 20px
 
 .star
   font-size: 18px
