--- a/app/src/sass/helpers/_main.sass
+++ b/app/src/sass/helpers/_main.sass
@@ -194,3 +194,6 @@ body
     line-height: 24px
     padding: 15px 36px 15px
     border-radius: 28px
+
+.no-overflow
+  overflow-y: hidden !important
