--- a/app/src/sass/components/popup.sass
+++ b/app/src/sass/components/popup.sass
@@ -63,6 +63,7 @@
     &__btn
       margin: 0 auto
       text-align: center
+
   &-title
     font-size: 48px
     line-height: 52px
@@ -113,3 +114,7 @@
     @media screen and ( max-width: 767px )
       top: 30px
       right: 30px
+.popup-thanks__btn
+  position: relative
+  top: auto
+  right: auto
