--- a/app/src/sass/components/footer.sass
+++ b/app/src/sass/components/footer.sass
@@ -36,7 +36,7 @@
     @media screen and ( max-width: 1366px )
       padding-top: 75px
     @media screen and ( max-width: 950px )
-      flex-direction: column
+      flex-direction: column-reverse
       align-items: center
   &-column
     &--info
@@ -46,11 +46,16 @@
       width: calc(100% / 3 - 50px)
       margin-top: 4px
       @media screen and ( max-width: 950px )
-        width: 50%
-        margin-bottom: 40px
-      @media screen and ( max-width: 767px )
         width: 100%
-
+        margin-bottom: 40px
+        justify-content: space-between
+        flex-direction: row
+        align-items: flex-start
+      @media screen and ( max-width: 550px )
+        flex-direction: column
+        align-items: center
+        justify-items:  flex-start
+        margin-top: 30px
     &--nav
       width: calc(100% / 3 * 2)
       margin-left: 77px
@@ -64,7 +69,7 @@
       @media screen and ( max-width: 767px )
         width: 60%
       @media screen and ( max-width: 550px )
-        width: 100%
+        display: none
 
     &--contacts
       width: calc(100% / 3)
@@ -74,7 +79,6 @@
         width: 100%
         display: flex
         flex-direction: column
-      @media screen and ( max-width: 400px )
         align-items: center
   &-wrapper
     @include dfr()
@@ -91,6 +95,8 @@
     margin-left: 87px
     @media screen and ( max-width: 1366px )
       max-width: 155px
+    @media screen and ( max-width: 950px )
+      display: none
     img
       width: 100%
       height: auto
@@ -106,6 +112,14 @@
       font-size: 18px
       line-height: 24px
       margin-top: 13px
+    @media screen and ( max-width: 950px )
+      margin-top: 0px
+    @media screen and ( max-width: 767px )
+      font-size: 16px
+      line-height: 20px
+      max-width: calc(50% - 10px)
+    @media screen and ( max-width: 550px )
+      max-width: 100%
   &-copyright
     font-size: 20px
     line-height: 26px
@@ -116,6 +130,15 @@
     @media screen and ( max-width: 1366px )
       font-size: 18px
       line-height: 24px
+    @media screen and ( max-width: 950px )
+      margin-top: 0px
+    @media screen and ( max-width: 767px )
+      font-size: 16px
+      line-height: 20px
+      max-width: calc(50% - 10px)
+    @media screen and ( max-width: 550px )
+      max-width: 100%
+      margin-top: 20px
   &-nav
     @include dfr()
     justify-content: space-between
