--- a/app/src/sass/components/news.sass
+++ b/app/src/sass/components/news.sass
@@ -20,19 +20,19 @@
     @media screen and ( max-width: 950px )
       max-width: none
       width: 100%
-      flex-direction: column
-      align-items: center
   &-item
     width: calc(100% / 3 - 53px)
     @media screen and ( max-width: 1366px )
-      width: calc(100% / 3 - 40px)
+      width: calc(100% / 3 - 20px)
     @media screen and ( max-width: 950px )
-      width: 50%
+      width: calc(50% - 20px)
       margin-bottom: 30px
-    @media screen and ( max-width: 767px )
-      width: 70%
+      &:nth-child(3)
+        display: none
     @media screen and ( max-width: 550px )
       width: 100%
+      &:nth-child(3)
+        display: block
     &__href
       display: flex
       flex-direction: column
