--- a/app/src/sass/components/partners.sass
+++ b/app/src/sass/components/partners.sass
@@ -23,16 +23,26 @@
     @media screen and ( max-width: 1366px )
       margin: 83px auto 0
       max-width: 1140px
+    @media screen and ( max-width: 950px )
+      justify-content: space-around
+      margin: 30px auto 0px
   &-item
-    width: calc(100% / 2)
+    width: calc(100% / 5)
     margin-bottom: 105px
     display: flex
     justify-content: center
     @media screen and ( max-width: 1366px )
       margin-bottom: 73px
+    @media screen and ( max-width: 950px )
+      width: calc(100% / 3)
+    @media screen and ( max-width: 550px )
+      width: calc(100% / 2)
+      margin-bottom: 30px
     &__href
       display: flex
       justify-content: center
+      @media screen and ( max-width: 550px )
+        max-width: 60px
       img
         width: 100%
         height: 100%
