--- a/app/src/sass/components/form.sass
+++ b/app/src/sass/components/form.sass
@@ -32,6 +32,7 @@
         padding: 13px 20px
         resize: none
         height: calc(100% - 21px)
+        margin: 0px
         @media screen and ( max-width: 550px )
           font-size: 16px
           line-height: 20px
