ленивая подгрузка карты

--- a/app/src/sass/components/map.sass
+++ b/app/src/sass/components/map.sass
@@ -16,6 +16,11 @@
       height: 548px
     @media screen and ( max-width: 550px )
       height: 350px
+    &.js-lazy-map
+      background-image: url(/app/build/img/map.jpg)
+      background-repeat: no-repeat
+      background-size: cover
+      cursor: pointer
   &-balloon
     &__header
       font-size: 28px
