--- a/app/src/sass/components/burger.sass
+++ b/app/src/sass/components/burger.sass
@@ -38,6 +38,9 @@
     opacity: 0
     visibility: hidden
     z-index: 100
+    .popup-close
+      top: 60px
+      right: 55px
     &.popup-open
       opacity: 1
       visibility: visible
