--- a/app/src/sass/components/header.sass
+++ b/app/src/sass/components/header.sass
@@ -77,6 +77,7 @@
         transition: all 0.4s
   &-logo
     max-width: 170px
+    display: block
     @media screen and ( max-width: 1366px )
       max-width: 158px
     @media screen and ( max-width: 1100px )
