--- a/app/src/sass/helpers/_main.sass
+++ b/app/src/sass/helpers/_main.sass
@@ -139,12 +139,17 @@ body
   justify-content: center
   border-radius: 50%
   overflow: hidden
+  transform: scale(0)
+  transition: all 0.4s
   @media screen and ( max-width: 1366px )
     width: 340px
     height: 340px
   @media screen and ( max-width: 400px )
     width: 240px
     height: 240px
+  &.scale
+    transform: scale(1)
+    transition: all 0.4s
   &__title
     font-size: 72px
     line-height: 64px
