--- a/app/src/sass/components/popup.sass
+++ b/app/src/sass/components/popup.sass
@@ -134,6 +134,7 @@
   right: 70px
   transition: all 0.4s
   z-index: 100
+  box-shadow: 3px 4px 20px 0px rgba(0, 0, 0, 0.1)
   @media screen and ( max-width: 767px )
     padding: 25px
     bottom: 35px
