--- a/app/src/sass/components/header.sass
+++ b/app/src/sass/components/header.sass
@@ -1,8 +1,6 @@
 .header
   z-index: 4
-  position: absolute
-  top: 0
-  left: 0
+  position: relative
   width: 100%
   &-wrapper
     display: flex
@@ -86,4 +84,16 @@
       width: 100%
       height: 100%
       object-fit: contain
-
+.header-logo--main
+  display: none
+.header-logo--inner
+  display: block
+.index
+  .header
+    position: absolute
+    top: 0
+    left: 0
+  .header-logo--main
+    display: block
+  .header-logo--inner
+    display: none
