--- a/app/src/sass/components/header.sass
+++ b/app/src/sass/components/header.sass
@@ -17,7 +17,7 @@
     &__item
       font-size: 20px
       line-height: 28px
-      color: #fff
+      color: #000
       margin-left: 39px
       position: relative
       @media screen and ( max-width: 1366px )
@@ -36,7 +36,7 @@
           visibility: visible
           transition: all 0.5s 0.2s
       a
-        color: #fff
+        color: #000
         transition: all 0.4s
   &-nav
     margin-top: 9px
@@ -97,3 +97,11 @@
     display: block
   .header-logo--inner
     display: none
+  .header-menu__item
+    color: #fff
+    a
+      color: #fff
+  .header-submenu__item
+    color: #000
+    a
+      color: #000
