--- a/app/src/sass/components/default.sass
+++ b/app/src/sass/components/default.sass
@@ -7,10 +7,47 @@ h1
   @media screen and ( max-width: 767px )
     font-size: 35px
     line-height: 42px
+  @media screen and ( max-width: 550px )
+    font-size: 28px
+    line-height: 34px
 h2
   font-size: 60px
   line-height: 64px
-.wiziwig
+  @media screen and ( max-width: 1366px )
+    font-size: 48px
+    line-height: 52px
+  @media screen and ( max-width: 767px )
+    font-size: 30px
+    line-height: 38px
+  @media screen and ( max-width: 550px )
+    font-size: 24px
+    line-height: 30px
+h3
+  font-size: 48px
+  line-height: 52px
+  @media screen and ( max-width: 1366px )
+    font-size: 38px
+    line-height: 42px
+  @media screen and ( max-width: 767px )
+    font-size: 26px
+    line-height: 35px
+  @media screen and ( max-width: 550px )
+    font-size: 20px
+    line-height: 28px
+.wysiwyg
+  h1
+    margin-top: 23px
+    margin-bottom: 69px
+  h2
+    margin-top: 72px
+    margin-bottom: 40px
+    @media screen and ( max-width: 1366px )
+      margin-bottom: 44px
+  h3
+    margin-top: 74px
+    margin-bottom: 32px
+    @media screen and ( max-width: 1366px )
+      margin-bottom: 34px
   a
     font-size: 22px
     line-height: 32px
@@ -20,3 +57,75 @@ h2
     &:hover
       border-bottom: 1px solid rgba(217,217,217,0)
       transition: all 0.4s
+  p
+    font-size: 22px
+    line-height: 32px
+    color: #000
+    @media screen and ( max-width: 1366px )
+      font-size: 20px
+      line-height: 30px
+    @media screen and ( max-width: 767px )
+      font-size: 18px
+      line-height: 26px
+    & + p
+      margin-top: 24px
+  li
+    font-size: 22px
+    line-height: 32px
+    color: #000
+    @media screen and ( max-width: 1366px )
+      font-size: 20px
+      line-height: 30px
+    @media screen and ( max-width: 767px )
+      font-size: 18px
+      line-height: 26px
+  td
+    font-size: 18px
+    line-height: 24px
+    color: #000
+    border: 1px solid #e5e5e5
+    padding: 20px 25px
+  th
+    font-size: 18px
+    line-height: 24px
+    color: #000
+    border: 1px solid #e5e5e5
+    text-align: left
+    padding: 20px 25px
+  table
+    margin-top: 32px
+    margin-bottom: 32px
+    width: 100%
+  img
+    max-width: 100%
+    width: auto
+    object-fit: contain
+    margin-top: 32px
+    margin-bottom: 29px
+  ol
+    list-style-type: decimal
+    padding-left: 35px
+    margin-top: 24px
+    margin-bottom: 24px
+    li
+      &::marker
+        color: $orange
+  ul
+    margin-top: 24px
+    margin-bottom: 24px
+    li
+      position: relative
+      padding-left: 35px
+      &::before
+        content: ""
+        width: 25px
+        height: 1px
+        display: block
+        background-color: $orange
+        position: absolute
+        top: 18px
+        left: 0
+        @media screen and ( max-width: 1366px )
+          top: 15px
+        @media screen and ( max-width: 767px )
+          top: 13px
