--- a/app/src/sass/components/news.sass
+++ b/app/src/sass/components/news.sass
@@ -126,3 +126,16 @@
       margin-top: 0px
     @media screen and ( max-width: 950px )
       margin-top: 15px
+  &-date
+    margin-top: 77px
+    @media screen and ( max-width: 767px )
+      margin-top: 50px
+    p
+      font-size: 28px
+      line-height: 34px
+      @media screen and ( max-width: 1366px )
+        font-size: 24px
+        line-height: 28px
+      @media screen and ( max-width: 767px )
+        font-size: 20px
+        line-height: 24px
