--- a/app/src/sass/helpers/_main.sass
+++ b/app/src/sass/helpers/_main.sass
@@ -229,6 +229,7 @@ body
   &-item
     position: relative
     padding-right: 15px
+    margin-right: 4px
     &::after
       content: "/"
       width: 9px
@@ -240,6 +241,8 @@ body
       right: 0
       @media screen and ( max-width: 1366px )
         top: 2px
+    &:last-child
+      margin-right: 0px
     a
       font-size: 18px
       line-height: 24px
@@ -260,8 +263,8 @@ body
   margin-bottom: 67px
   text-align: center
   @media screen and ( max-width: 1366px )
-    max-width: 800px
-  @media screen and ( max-width: 950px )
+    max-width: 955px
+  @media screen and ( max-width: 1100px )
     max-width: none
     padding: 0px 20px
 .table-wrapper
