--- a/app/src/sass/components/default.sass
+++ b/app/src/sass/components/default.sass
@@ -69,6 +69,8 @@ h3
       line-height: 26px
     & + p
       margin-top: 24px
+    a
+      color: $blue
   li
     font-size: 22px
     line-height: 32px
