--- a/app/src/sass/components/pages/price.sass
+++ b/app/src/sass/components/pages/price.sass
@@ -2,12 +2,24 @@
   width: 100%
   padding: 0px 160px
   margin: 81px auto 140px
+  @media screen and ( max-width: 1600px )
+    padding: 0 113px
+  @media screen and ( max-width: 1366px )
+    margin: 81px auto 100px
+  @media screen and ( max-width: 1200px )
+    padding: 0 40px
+  @media screen and ( max-width: 767px )
+    padding: 0px 20px
   &-tabs
     width: 100%
     @include dfr()
     justify-content: center
+    flex-wrap: wrap
     &__item
       margin-right: 10px
+      margin-bottom: 23px
+      @media screen and ( max-width: 1600px )
+        margin-right: 5px
       &:last-child
         margin-right: 0px
       a
@@ -18,6 +30,14 @@
         line-height: 26px
         border-radius: 20px
         transition: all 0.4s
+        @media screen and ( max-width: 1600px )
+          font-size: 18px
+          line-height: 24px
+          padding: 6px 27px
+        @media screen and ( max-width: 550px )
+          font-size: 16px
+          line-height: 20px
+          padding: 6px 14px
         &:hover
           background-color: $blue
           color: #fff
@@ -27,30 +47,54 @@
   &-info
     @include dfc()
     align-items: center
-    margin-top: 60px
+    margin-top: 37px
     margin-bottom: 97px
+    @media screen and ( max-width: 550px )
+      margin-top: 25px
+      margin-bottom: 50px
     &__name
       font-size: 28px
       line-height: 32px
       color: #000
       margin-bottom: 25px
+      text-align: center
+      @media screen and ( max-width: 1366px )
+        font-size: 24px
+        line-height: 30px
+        margin-bottom: 19px
+      @media screen and ( max-width: 550px )
+        font-size: 20px
+        line-height: 26px
     &__address
       font-size: 20px
       line-height: 30px
       color: #000
       margin-bottom: 32px
+      text-align: center
+      @media screen and ( max-width: 1366px )
+        font-size: 18px
+        line-height: 24px
+        margin-bottom: 34px
+      @media screen and ( max-width: 550px )
+        font-size: 16px
+        line-height: 20px
     &__link
       font-size: 20px
       line-height: 14px
       color: $blue
       border-bottom: 1px solid rgba(9, 58, 158, 0.1)
       transition: all 0.4s
+      @media screen and ( max-width: 1366px )
+        font-size: 18px
+      @media screen and ( max-width: 550px )
+        font-size: 16px
+        line-height: 10px
       &:hover
         border-bottom-color: rgba(9,58,158,0)
   &-table
     width: 100%
     &__wrapper
-      margin-top: 85px
+      margin-top: 63px
       overflow-y: hidden
     &__head
       th
@@ -60,6 +104,19 @@
         color: #acacac
         padding-left: 24px
         padding-bottom: 16px
+        white-space: nowrap
+        @media screen and ( max-width: 1366px )
+          font-size: 18px
+          line-height: 24px
+          padding-bottom: 20px
+        @media screen and ( max-width: 767px )
+          padding-left: 0px
+        @media screen and ( max-width: 550px )
+          font-size: 16px
+          line-height: 20px
+        &:last-child
+          @media screen and ( max-width: 1100px )
+            display: none
   &-item
     border-top: 1px solid #e5e5e5
     &:last-child
@@ -68,10 +125,22 @@
       padding-top: 47px
       padding-left: 24px
       padding-bottom: 41px
+      @media screen and ( max-width: 1366px )
+        padding-top: 35px
+        padding-bottom: 34px
+      @media screen and ( max-width: 767px )
+        padding-left: 0px
     &__name
       font-size: 20px
       line-height: 26px
       color: #000
+      white-space: nowrap
+      @media screen and ( max-width: 1366px )
+        font-size: 18px
+        line-height: 24px
+      @media screen and ( max-width: 550px )
+        font-size: 16px
+        line-height: 20px
     &__cost
       font-size: 20px
       line-height: 26px
@@ -79,20 +148,56 @@
       padding-top: 47px
       padding-left: 24px
       padding-bottom: 41px
+      white-space: nowrap
+      @media screen and ( max-width: 1366px )
+        font-size: 18px
+        line-height: 24px
+        padding-top: 35px
+        padding-bottom: 34px
+      @media screen and ( max-width: 1100px )
+        display: none
+      @media screen and ( max-width: 550px )
+        font-size: 16px
+        line-height: 20px
       &--hidden
         display: none
+        @media screen and ( max-width: 1100px )
+          display: flex
+          flex-direction: row
+          padding: 0px
+          margin-top: 15px
+          .price-item__cost-label
+            margin-right: 10px
     .characteristics
       @include dfr()
       margin-top: 33px
+      @media screen and ( max-width: 1366px )
+        margin-top: 24px
       &-item
         margin-right: 58px
+        @media screen and ( max-width: 1366px )
+          margin-right: 48px
         &:last-child
           margin-right: 0px
         &__name
           font-size: 20px
           line-height: 26px
           color: #acacac
+          white-space: nowrap
+          @media screen and ( max-width: 1366px )
+            font-size: 18px
+            line-height: 24px
+          @media screen and ( max-width: 550px )
+            font-size: 16px
+            line-height: 20px
         &__value
           font-size: 20px
           line-height: 26px
           color: #000
+          white-space: nowrap
+          @media screen and ( max-width: 1366px )
+            font-size: 18px
+            line-height: 24px
+          @media screen and ( max-width: 550px )
+            font-size: 16px
+            line-height: 20px
