--- a/app/src/sass/components/pages/price.sass
+++ b/app/src/sass/components/pages/price.sass
@@ -201,3 +201,9 @@
           @media screen and ( max-width: 550px )
             font-size: 16px
             line-height: 20px
+  &-title
+    text-align: center
+    margin-top: 128px
+    margin-bottom: 56px
+    @media screen and ( max-width: 1366px )
+      margin-top: 90px
