--- a/app/src/sass/helpers/_main.sass
+++ b/app/src/sass/helpers/_main.sass
@@ -1,7 +1,8 @@
 body
   font-family: 'Jost', sans-serif
   font-weight: 400
-
+  &.card
+    background-color: #fcfcfc
 .container
   max-width: 1785px
   width: 100%
