--- a/app/src/sass/components/pages/shops.sass
+++ b/app/src/sass/components/pages/shops.sass
@@ -3,6 +3,8 @@
   justify-content: flex-end
   margin-bottom: 140px
   position: relative
+  @media screen and ( max-width: 1200px )
+    flex-direction: column
   &.sticky
     .shop-container--sticky
       position: fixed
@@ -21,6 +23,18 @@
       margin-top: 9px
       margin-left: auto
       margin-right: 30px
+      @media screen and ( max-width: 1660px )
+        width: 600px
+        height: 590px
+      @media screen and ( max-width: 1366px )
+        width: 530px
+      @media screen and ( max-width: 1200px )
+        width: 100%
+        height: 500px
+        margin-right: 0px
+      @media screen and ( max-width: 767px )
+        height: 320px
+
   &-item
     border-bottom: 1px solid #e5e5e5
     padding-bottom: 60px
@@ -29,13 +43,32 @@
       padding-top: 0px
   &-container
     width: 50%
+    @media screen and ( max-width: 1200px )
+      width: 100%
+      padding: 0 40px
+    @media screen and ( max-width: 767px )
+      padding: 20px
   &-list
     width: 760px
     margin-left: 40px
+    @media screen and ( max-width: 1660px )
+      width: 600px
+    @media screen and ( max-width: 1366px )
+      width: 530px
+    @media screen and ( max-width: 1200px )
+      width: 100%
+      margin-left: 0px
+      margin-top: 50px
   &-name
     font-size: 48px
     line-height: 52px
     margin-bottom: 36px
+    @media screen and ( max-width: 1366px )
+      font-size: 38px
+      line-height: 44px
+    @media screen and ( max-width: 767px )
+      font-size: 28px
+      line-height: 34px
   &-address
     position: relative
     padding-left: 39px
@@ -55,6 +88,14 @@
       font-size: 20px
       line-height: 30px
       margin-bottom: 12px
+      @media screen and ( max-width: 1366px )
+        font-size: 18px
+        line-height: 28px
+        margin-bottom: 5px
+      @media screen and ( max-width: 550px )
+        font-size: 16px
+        line-height: 22px
+
   &-show-point
     font-size: 18px
     line-height: 26px
@@ -62,6 +103,13 @@
     background-color: $orange
     padding: 0px 15px
     border-radius: 12.5px
+    @media screen and ( max-width: 1366px )
+      font-size: 16px
+      line-height: 23px
+      padding: 0 10px
+    @media screen and ( max-width: 550px )
+      font-size: 14px
+      line-height: 18px
   &-number
     position: relative
     padding-left: 39px
@@ -77,10 +125,18 @@
       background-image: url(/app/build/img/phone.svg)
       background-repeat: no-repeat
       background-size: contain
+      @media screen and ( max-width: 767px )
+        top: 0
     a
       font-size: 28px
       line-height: 32px
       color: #000
+      @media screen and ( max-width: 1366px )
+        font-size: 24px
+        line-height: 26px
+      @media screen and ( max-width: 767px )
+        font-size: 20px
+        line-height: 24px
   &-dropdown
     opacity: 1
     visibility: visible
@@ -91,6 +147,12 @@
       line-height: 30px
       color: #000
       margin-bottom: 24px
+      @media screen and ( max-width: 1366px )
+        font-size: 18px
+        line-height: 28px
+      @media screen and ( max-width: 550px )
+        font-size: 16px
+        line-height: 22px
     &.dropdown--hidden
       opacity: 0
       visibility: hidden
