часть скрипта для привязки объекта к метке

--- a/app/src/sass/components/map.sass
+++ b/app/src/sass/components/map.sass
@@ -136,7 +136,7 @@
     opacity: 0.5 !important
     transition: all 0.4s
 .ymaps-2-1-78-placemark-overlay
-  &:hover
+  &:focus
     .ymaps-2-1-78-image
       background-image: url(/app/build/img/map-pin.png) !important
 .placemark
