--- a/app/src/sass/components/pages/about.sass
+++ b/app/src/sass/components/pages/about.sass
@@ -26,6 +26,17 @@
     justify-content: center
     margin-top: 124px
     padding-bottom: 142px
+  &-canvas
+    position: relative
+    z-index: 3
+  &-anim
+    position: relative
+    margin-top: 80px
+    margin-bottom: 51px
+  &-circle
+    position: absolute
+    top: 0px
+    left: calc(50% - 200px)
 
 .about-map
   padding-top: 130px
@@ -139,6 +150,7 @@
 
 .about-company
   padding: 130px 0px
+  overflow: hidden
   &__head
     max-width: 900px
     margin: 0 auto
@@ -154,3 +166,66 @@
       font-size: 30px
       line-height: 40px
       text-align: center
+
+.fly
+  &-corn
+    position: relative
+    width: 100%
+    height: 450px
+  &-elem
+    width: 40px
+    height: 40px
+    position: absolute
+    bottom: 0
+    left: 0px
+    bottom: 0
+    animation-duration: 1s
+    animation: flying infinite linear
+    background-image: url(/app/build/img/wheats-sprite.png)
+    img
+      width: auto
+      height: auto
+      object-fit: contain
+    &--1
+      width: 46px
+      height: 41px
+      background-position: -69px -10px
+    &--2
+      width: 32px
+      height: 46px
+      background-position: -135px -10px
+    &--3
+      width: 39px
+      height: 29px
+      background-position: -62px -81px
+    &--4
+      width: 24px
+      height: 34px
+      background-position: -10px -147px
+    &--5
+      width: 32px
+      height: 46px
+      background-position: -10px -81px
+    &--6
+      width: 27px
+      height: 17px
+      background-position: -98px -147px
+    &--7
+      width: 23px
+      height: 36px
+      background-position: -187px -10px
+    &--8
+      width: 24px
+      height: 28px
+      background-position: -54px -147px
+    &--9
+      width: 34px
+      height: 24px
+      background-position: -121px -81px
+    &--10
+      width: 23px
+      height: 31px
+      background-position: -187px -66px
+@keyframes flying
+  100%
+    left: 100%
